# cg

uebung6/programmrahmen/: CMakeLists.txt  common.cmake
uebung6/programmrahmen/data/: cube.frag  cube.geom  cube.vert  model.geom
uebung6/programmrahmen/src/: exercise61.cpp  exercise61.h  exercise62.cpp  exercise62.h  exercise63.cpp  exercise63.h
